# aifaq

./: LICENSE  index.html  package.json  tailwind.config.js  vite.config.ts
backend/: .gitignore  pyproject.toml
backend/app/: api.py  constants.py  models.py
src/: App.tsx  index.css
src/components/: Base.tsx  ChatAttachDropdown.tsx  ChatBox.tsx  ChatHistory.tsx  ChatRequest.tsx  ChatResponse.tsx  ChatWindow.tsx  ContentWidthWrapper.tsx  MainContent.tsx  Sidebar.tsx  SuggestionItem.tsx  UserDropdown.tsx  WelcomeSection.tsx
src/components/icons/: IconClip.tsx  IconUp.tsx  IconUser.tsx
src/components/ui/: Button.tsx  DropdownMenu.tsx  IconButton.tsx
src/core/: api.py  main_router.py  test_router.py  utils.py
